# AtariTrader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_PORTING.md  build.bat  build.sh  clean.sh
cfg/: a7800.cfg
docs/: BANK_SWITCHING.md  DEVELOPMENT.md  GAMEPLAY_TODO.md  MEMORY_MAP.md
images/: heart.aseprite
samples/: 7800basic_variable_redefs.h  joystick.bas  joystick.bas.list.txt  joystick.bas.symbol.txt  simple.bas  simple.bas.list.txt  simple.bas.symbol.txt
src/: 7800basic_variable_redefs.h  a78info.cfg  astrowing.bas  astrowing_bnk.bas  build_dasm_debug.txt  build_manual.txt  build_manual_dasm.txt  build_manual_debug.txt  build_patched_debug.txt  build_status.txt  convert_assets.py  convert_font.py  engine_level1.bas  engine_shared.bas  engine_title.bas  engine_variables.bas  includes.7800  main.bas  main.bas.list.txt  main.bas.symbol.txt  rpmegafighter.bas  rpmegafighter.bas.list.txt  rpmegafighter.bas.pre  rpmegafighter.bas.symbol.txt  split_arrows.py  split_font.py  vgm2pokey.py
src/7800basic_local/samples/languagetest/: include_01.bas  include_02.bas  languagetest.bas
src/7800basic_local/samples/simple/: 7800basic_variable_redefs.h  simple.bas.a78  simple.bas.asm  simple.bas.list.txt  simple.bas.symbol.txt
src/7800basic_local/samples/underthehood/: updateobjects.asm
src/graphics/: Boss.aseprite
src/music/: Boss.fur  Boss.vgm  Song_01.fur  Song_01.vgm  Song_01_music.bas  Song_03.fur  Song_03.vgm
tools/: split_boss.py
